add first ideas

--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -15,7 +15,9 @@
 \chapter{Einleitung}\label{ch:einleitung}
 	Mit der Einführung beginnt die arabische Seitennummerierung. Eine gute Einleitung sollte folgende Punkte erörtern:
 	\begin{itemize}
-		\item Einführung in das Problemfeld
+		\item Einführung in das Problemfeld\\
+		-> Bewegungensanalysen sind oft nur mit teuren optischen Verfahren in speziellen Einrichtungen möglich. Somit sind Untersuchungen und Messugen von Bewegungsabläufen nur in speziell dafür ausgelegten Laboren erfolgt. Mit der zunehmenden Miniaturisierung der Bewegunssensoren wird die Realisierung von kompakten und für den Träger komfortablen Geräten erreicht. \\
+		-> Sensorgenauigkeit ist Problem		
 		\item Zweck, Ziel, Intension und Notwendigkeit der Untersuchung
 		\item Stand der Wissenschaft
 		\item Ablauf und Gliederung des Projekts
