add introduction and aim of the project, add some glossary, changed declaration of independent study research

--- a/abstract/self.tex
+++ b/abstract/self.tex
@@ -1,5 +1,8 @@
 \chapter*{Selbstständige Arbeit}\label{ch:selbstaendige_arbeit}
-    Ich/wir bestätige/n, dass ich/wir die vorliegende Arbeit selbstständig und ohne Benutzung anderer als der im Literaturverzeichnis angegebenen Quellen und Hilfsmittel angefertigt habe/n. Sämtliche Textstellen, die nicht von mir/uns stammen, sind als Zitate gekennzeichnet und mit dem genauen Hinweis auf ihre Herkunft versehen. 
+Wir erklären ausdrücklich, dass es sich bei dieser von uns eingereichten Arbeit um eine von uns selbst und ohne unerlaubte Beihilfe sowie in eigenen Worten verfasste Originalarbeit handelt.
+Wir bestätigen überdies, dass die Arbeit als Ganze oder in Teilen weder bereits einmal zur Abgeltung anderer Studienleistungen an der Berner Fachhochschule oder an einer anderen Universität oder Ausbildungseinrichtung eingereicht worden ist noch inskünftig durch unser Zutun als Abgeltung einer weiteren Studienleistung eingereicht werden wird.
+Wir bestätigen, dass wir die vorliegende Arbeit ohne Benutzung anderer als der im Literaturverzeichnis angegebenen Quellen und Hilfsmittel angefertigt haben. Sämtliche Textstellen, die nicht von uns stammen, sind als Zitate gekennzeichnet und mit dem genauen Hinweis auf ihre Herkunft versehen. 
+    
 \vspace{1cm}
 \begin{tabbing}
 xxxxxxxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxx \kill
