--- a/glossary.tex
+++ b/glossary.tex
@@ -18,6 +18,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newglossaryentry{g:beispiel}{name=Beispiel, description={Ein Beispiel}}
+\newglossaryentry{g:MEMS}{name=MEMS, description={Microelectromechanical Systems}}
+\newglossaryentry{g:EHSM}{name=EHSM, description={Eidgenössische Hochschule für Sport Magglingen}}
 
 
 
