--- a/acronyms.tex
+++ b/acronyms.tex
@@ -17,7 +17,8 @@
 %   Umlaute müssen separat behandelt werden!
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newacronym{ac:bsp}{BSP}{Beispiel}
-
+\newacronym{ac:MEMS}{MEMS}{Microelectromechanical Systems}
+\newacronym{ac:EHSM}{EHSM}{Eidgenössische Hochschule für Sport Magglingen}
 
 
 
