--- a/packages.tex
+++ b/packages.tex
@@ -19,6 +19,7 @@
 
 %Sprach-Optionen
 \usepackage[ngerman]{babel} %neue deutsche Rechtschreibung
+\usepackage[ngerman]{translator} % Uebersetzer
 \usepackage[T1]{fontenc}  %richtige Worttrennung
 %\usepackage[applemac]{inputenc}				% Mac - load extended character set (ISO 8859-1)
 \usepackage[latin1]{inputenc}  				% Unix/Linux - load extended character set (ISO 8859-1)
