--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -13,9 +13,9 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Einleitung}\label{ch:einleitung}
-Bewegungensanalysen waren früher nur mit optischen Verfahren in speziellen Einrichtungen möglich. EIne Methode ist, dass ein opisches tracken von Markern. Die Marker sind dabei auf dem Testobjekt angebracht. Die Marker sind an für die Rekonstruktion des Bewegungsablaufes relevanten Stellen angebracht. Beispielsweise zum simplen Tracken eines Läufers (Beine) an Hüfte, Knie und Knöchel. Die Marker sind somit an den beweglichen Gelenken angebracht. Der Bewegungsablauf wird von mehreren Kameras aus verschiedenen Perspektiven gefilmt. Mit Bildverarbeitung und Triangulation kann anschliessend auf die Position des Markers im Raum geschlossen werden. Untersuchungen und Messugen von Bewegungsabläufen auf diese Art sind nur in speziell dafür ausgelegten Laboren durchfürbar. Durch diese Labore sind die Messungen zum einen ortgebunden und zum andern durch die aufwändigen und teuren Kamerasystemen kostspielig. Eine Lösung mit günstigen und komfortablen Analysegeräten ist gefragt womit auch Messungen im täglichen Umfeld durführbar sind.
+Bewegungensanalysen waren früher nur mit optischen Verfahren in speziellen Einrichtungen möglich. EIne Methode ist, dass ein opisches tracken von Markern. Die Marker sind dabei auf dem Testobjekt angebracht. Die Marker sind an für die Rekonstruktion des Bewegungsablaufes relevanten Stellen angebracht. Beispielsweise zum simplen Tracken eines Läufers (Beine) an Hüfte, Knie und Knöchel. Die Marker sind somit an den beweglichen Gelenken angebracht. Der Bewegungsablauf wird von mehreren Kameras aus verschiedenen Perspektiven gefilmt. Mit Bildverarbeitung und Triangulation kann anschliessend auf die Position des Markers im Raum geschlossen werden. Untersuchungen und Messungen von Bewegungsabläufen auf diese Art sind nur in speziell dafür ausgelegten Laboren durchführbar. Durch diese Labore sind die Messungen zum einen ortsgebunden und zum andern durch die aufwändigen und teuren Kamerasystemen kostspielig. Eine Lösung mit günstigen und komfortablen Analysegeräten ist gefragt womit auch Messungen im täglichen Umfeld durführbar sind.
 
-Dank der MEMS-Technologie \cite{g:MEMS} ist in den letzten Jahren eine zunehmenden Miniaturisierung von Bewegunssensoren wie Beschleunigunssenoren oder Gyroscopen erfolgt. Eine Bewegung kann somit auch mithilfe eines Beschleunigungssensor gemessen werden. Dieser misst jedoch nicht direkt die Position wie in den beschriebenen Kamera-Systemen, sondern die Beschleunigung. Um die Bewegung im Raum zu messen benötigt man die Startposition und Orientierung des Sensors sowie die Beschleunigung und Richtung der Bewegung von diesem Punkt aus. Mit anschliessender doppelter Integration der Beschleunigung kann die neue Position berechnet werden. Somit ist die Realisierung von kompakten und für den Träger komfortablen Geräten möglich.
+Dank der \gls{ac:MEMS}-Technologie ist in den letzten Jahren eine zunehmenden Miniaturisierung von Bewegunssensoren wie Beschleunigunssensoren oder Gyroskopen erfolgt. Eine Bewegung kann somit auch mithilfe eines Beschleunigungssensor gemessen werden. Dieser misst jedoch nicht direkt die Position wie in den beschriebenen Kamera-Systemen, sondern die Beschleunigung. Um die Bewegung im Raum zu messen benötigt man die Startposition und Orientierung des Sensors sowie die Beschleunigung und Richtung der Bewegung von diesem Punkt aus. Mit anschliessender doppelter Integration der Beschleunigung kann die neue Position berechnet werden. Somit ist die Realisierung von kompakten und für den Träger komfortablen Geräten möglich.
 
 Ein Problem bei diesem Verfahren mit den Beschleunigungssensoren, ist die Genuaigkeit der Messung. Bereits ein kleiner Fehler in der Messung der Beschleunigung resultiert zu einem grossen Fehler in der Endposition. Hinzu kommt, dass der Sensor einen Drift aufweist. Somit sind nur Messungen mit anschliessender Berechnung der Position von kurzer Dauer (enigen Sekunden) zu realisieren. 		
 
