add some parts of the state of the art

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -28,3 +28,53 @@
   month = {09},
   keywords = {lit},
 }
+
+@BOOK{lit:kochi,
+  title = {Research on Wearable Sensor system for 3D lower limb kinematics analysis},
+  publisher = {Kochi University of Technology},
+  year = {2010},
+  author = {Kun Liu},
+  edition = {},
+  month = {09},
+  keywords = {lit},
+}
+
+@BOOK{lit:hokkaido,
+  title = {Gait posture estimation using wearable acceleration and gyro sensors},
+  publisher = {Hokkaido University},
+  year = {2009},
+  author = {Ryo Takeda, Shigeru Tadano, Akiko Natorigawa, Masahiro Todoh, Satoshi Yoshinari},
+  edition = {},
+  month = {11},
+  keywords = {lit},
+}
+
+@BOOK{lit:roboarm1,
+  title = {Method to Estimate the Position and Orientation of a Triaxial Accelerometer Mounted to an Industial Manipulator},
+  publisher = {Department of Electrical Engineering, Link"oping University},
+  year = {2011},
+  author = {Patrik Axelsson, Mikael Norrl"of},
+  edition = {},
+  month = {9},
+  keywords = {lit},
+}
+
+@BOOK{lit:roboarm2,
+  title = {Tool Position Estimation of a Flexible Industrial Robot using Recursive Bayesian Methods},
+  publisher = {IEEE International Conference on Robotics and Automation},
+  year = {2012},
+  author = {Patrik Axelsson, Rickard Karlsson, Mikael Norrl"of},
+  edition = {},
+  month = {5},
+  keywords = {lit},
+}
+
+@BOOK{lit:doubleint,
+  title = {3-D Position Estimation from Inertial Sensing: Minimizing the Error from the Process of Double Integration of Accelerations},
+  publisher = {Department of Mechanical Engineering, University of Coimbra},
+  year = {2009},
+  author = {Pedro Neto, J. Noberto Pires},
+  edition = {},
+  month = {},
+  keywords = {lit},
+}
