--- a/glossary.tex
+++ b/glossary.tex
@@ -18,7 +18,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newglossaryentry{g:beispiel}{name=Beispiel, description={Ein Beispiel}}
-
+\newglossaryentry{g:triangulation}{name=Triangulation, description= {Positionsbestimmung im Raum mittels Richtungs- und Abstandsmessung. Berechnung der Position erfolgt anschliessend mit geometrischen Funktionen.}}
+\newglossaryentry{g:magnetometer}{name=Magnetometer, description={Sensor zum Messen von magnetischen Flussdichten}}
 
 
 
