add sections and subsections

--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -13,33 +13,33 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Einleitung}\label{ch:einleitung}
-Für die Öffentlichkeit wurde das Motion-Tracking-Verfahren vor allem durch die Filmindustrie bekannt. Grosse Erfolge erreichte der Film Avatar - Aufbruch nach Pandora. In diesem Film wird mit einem optischen Motion-Tracking-Verfahren den Figuren Leben eingehaucht. Speziell ist, dass durch das zusätzliche Tracken des Gesichts auch Emotionen der Schauspieler auf die Figuren übertragen werden und somit nicht nur Ihre Bewegungsabläufe. Der Film gilt zurzeit als einer der erfolgreichsten Filme. Durch die aufwändige Technik, welche teilweise speziell für Avatar entwickelt wurde, entstanden jedoch auch sehr hohe Produktionskosten.
-
-Bewegungensanalysen waren früher nur mit optischen Verfahren in speziellen Einrichtungen möglich. Eine Methode ist, dass ein optisches tracken von Markern. Die Marker sind dabei auf dem Testobjekt angebracht. Die Marker sind an für die Rekonstruktion des Bewegungsablaufes relevanten Stellen angebracht. Beispielsweise zum simplen Tracken eines Läufers (Beine) an Hüfte, Knie und Knöchel. Die Marker sind somit an den beweglichen Gelenken angebracht. Der Bewegungsablauf wird von mehreren Kameras aus verschiedenen Perspektiven gefilmt. Mit Bildverarbeitung und \gls{g:triangulation} kann anschliessend auf die Position des Markers im Raum geschlossen werden. Untersuchungen und Messungen von Bewegungsabläufen auf diese Art sind nur in speziell dafür ausgelegten Laboren durchführbar. Durch diese Labore sind die Messungen zum einen ortsgebunden und zum andern durch die aufwändigen und teuren Kamerasystemen kostspielig. Eine Lösung mit günstigen und komfortablen Analysegeräten ist gefragt womit auch Messungen im täglichen Umfeld durchführbar sind.
-
-Dank der \gls{ac:MEMS}-Technologie ist in den letzten Jahren eine zunehmenden Miniaturisierung von Bewegungssensoren wie Beschleunigungssensoren oder Gyroskopen erfolgt. Eine Bewegung kann somit auch mithilfe eines Beschleunigungssensor gemessen werden. Dieser misst jedoch nicht direkt die Position wie in den beschriebenen Kamera-Systemen, sondern die Beschleunigung. Um die Bewegung im Raum zu messen benötigt man die Startposition und Orientierung des Sensors sowie die Beschleunigung und Richtung der Bewegung von diesem Punkt aus. Mit anschliessender doppelter Integration der Beschleunigung kann die neue Position berechnet werden. Somit ist die Realisierung von kompakten und für den Träger komfortablen Geräten möglich.
-
-Ein Problem bei diesem Verfahren mit den Beschleunigungssensoren, ist die Genauigkeit der Messung. Bereits ein kleiner Fehler in der Messung der Beschleunigung resultiert zu einem grossen Fehler in der Endposition. Hinzu kommt, dass der Sensor einen Drift sowie Offset aufweist. Somit sind nur Messungen mit anschliessender Berechnung der Position von kurzer Dauer (einigen Sekunden) zu realisieren. 		
-
+Für die Öffentlichkeit wurde das Motion-Tracking-Verfahren vor allem durch die Filmindustrie bekannt. Grosse Erfolge erreichte der Film Avatar - Aufbruch nach Pandora. In diesem Film wird mit einem optischen Motion-Tracking-Verfahren den Figuren Leben eingehaucht. Speziell ist, dass durch das zusätzliche Tracken des Gesichts auch Emotionen der Schauspieler auf die Figuren übertragen werden und somit nicht nur Ihre Bewegungsabläufe. Der Film gilt zurzeit als einer der erfolgreichsten Filme. Durch die aufwändige Technik, welche teilweise speziell für Avatar entwickelt wurde, entstanden jedoch auch sehr hohe Produktionskosten.\par
+%
+Bewegungensanalysen waren früher nur mit optischen Verfahren in speziellen Einrichtungen möglich. Eine Methode ist, dass ein optisches tracken von Markern. Die Marker sind dabei auf dem Testobjekt angebracht. Die Marker sind an für die Rekonstruktion des Bewegungsablaufes relevanten Stellen angebracht. Beispielsweise zum simplen Tracken eines Läufers (Beine) an Hüfte, Knie und Knöchel. Die Marker sind somit an den beweglichen Gelenken angebracht. Der Bewegungsablauf wird von mehreren Kameras aus verschiedenen Perspektiven gefilmt. Mit Bildverarbeitung und \gls{g:triangulation} kann anschliessend auf die Position des Markers im Raum geschlossen werden. Untersuchungen und Messungen von Bewegungsabläufen auf diese Art sind nur in speziell dafür ausgelegten Laboren durchführbar. Durch diese Labore sind die Messungen zum einen ortsgebunden und zum andern durch die aufwändigen und teuren Kamerasystemen kostspielig. Eine Lösung mit günstigen und komfortablen Analysegeräten ist gefragt womit auch Messungen im täglichen Umfeld durchführbar sind.\par
+%
+Dank der \gls{ac:MEMS}-Technologie ist in den letzten Jahren eine zunehmenden Miniaturisierung von Bewegungssensoren wie Beschleunigungssensoren oder Gyroskopen erfolgt. Eine Bewegung kann somit auch mithilfe eines Beschleunigungssensor gemessen werden. Dieser misst jedoch nicht direkt die Position wie in den beschriebenen Kamera-Systemen, sondern die Beschleunigung. Um die Bewegung im Raum zu messen benötigt man die Startposition und Orientierung des Sensors sowie die Beschleunigung und Richtung der Bewegung von diesem Punkt aus. Mit anschliessender doppelter Integration der Beschleunigung kann die neue Position berechnet werden. Somit ist die Realisierung von kompakten und für den Träger komfortablen Geräten möglich.\par
+%
+Ein Problem bei diesem Verfahren mit den Beschleunigungssensoren, ist die Genauigkeit der Messung. Bereits ein kleiner Fehler in der Messung der Beschleunigung resultiert zu einem grossen Fehler in der Endposition. Hinzu kommt, dass der Sensor einen Drift sowie Offset aufweist. Somit sind nur Messungen mit anschliessender Berechnung der Position von kurzer Dauer (einigen Sekunden) zu realisieren. \par		
+%
 \section{Zweck, Ziel, Intention und Notwendigkeit der Untersuchung}
-Der Wiedereinstieg in das Training für einen Sportler mit Kreuzbandriss ist schwer zu bestimmen. Zum einen will der Sportler schnellstmöglich mit dem Training weiterfahren um den Trainingsrückstand aufzuholen und den getätigten Aufbau nicht weiter zu verlieren. Zum andern sollte aber die Verletzung bestmöglich geheilt sein um Folgeschäden und weitere Trainingsrückschläge zu vermeiden. 
-
-An der \gls{ac:EHSM} wird dazu ein Test geleitet durch einen Physiotherapeuten am verletzen Sportler durchgeführt. Der Test dienen zum Ermitteln des Genesungszustandes des Sportlers. Bei diesem Test werden an der EHSM mehreren Übungen mit unterschiedlichen Belastungen des Knies durchgeführt. Eine Kamera filmt den Sportler zusätzlich während den Übungen. Die Auslenkung des Knies in der Frontalebene des Körpers lässt auf den Genesungszustand nach einem Kreuzbandriss schliessen. Auch ist erschlich ob der Sportler eine Schonhaltung einnimmt. Mithilfe der Aufnahme wertet der Therapeut diese Auslenkung aus und bestimmt die weiteren Trainingsmöglichkeiten.
-
+Der Wiedereinstieg in das Training für einen Sportler mit Kreuzbandriss ist schwer zu bestimmen. Zum einen will der Sportler schnellstmöglich mit dem Training weiterfahren um den Trainingsrückstand aufzuholen und den getätigten Aufbau nicht weiter zu verlieren. Zum andern sollte aber die Verletzung bestmöglich geheilt sein um Folgeschäden und weitere Trainingsrückschläge zu vermeiden.\par 
+%
+An der \gls{ac:EHSM} wird dazu ein Test geleitet durch einen Physiotherapeuten am verletzen Sportler durchgeführt. Der Test dienen zum Ermitteln des Genesungszustandes des Sportlers. Bei diesem Test werden an der EHSM mehreren Übungen mit unterschiedlichen Belastungen des Knies durchgeführt. Eine Kamera filmt den Sportler zusätzlich während den Übungen. Die Auslenkung des Knies in der Frontalebene des Körpers lässt auf den Genesungszustand nach einem Kreuzbandriss schliessen. Auch ist erschlich ob der Sportler eine Schonhaltung einnimmt. Mithilfe der Aufnahme wertet der Therapeut diese Auslenkung aus und bestimmt die weiteren Trainingsmöglichkeiten.\par
+%
 Dieser Test mit anschliessender Auswertung der Kameraaufnahmen ist durch seine Subjektivität nicht die bestmögliche Lösung. Die Auslenkung des Knies ist schwer zu bestimmen und kann nur geschätzt werden. Eine falsche Auswertung hat bei zu frühem Trainingseinstieg folgen auf die Gesundheit des Athleten, bei zu spätem Wiedereinstieg geht dem Sportler wichtige Zeit verloren. Den Therapeuten würde eine zusätzliche Angabe der absolute Auslenkung helfen, um eine bessere Entscheidung treffen zu können. Diese Auslenkung könnte beispielsweise mit einem Beschleunigungssensor gemessen werden.
-
+%
 \section{Aufgabenstellung}
-
-
+blabla\par
+%
 \section{Stand der Wissenschaft}
-Auf dem Gebiet der Biomechanik werden viele Forschungen zur Untersuchung eine Bewegungsablaufes mit Beschleunigungssensoren getätigt. Die Motivation ist in den meisten Arbeiten dieselbe. Das Messen von Bewegungsabläufen wurde bisher mit Kameras in speziell dafür vorgesehenen Laboren vorgenommen. Bewegungsabläufe in einem anderen Umfeld sind mit dieser Methode nicht möglich zu bestimmen. Viele Forschungen wollen aus diesem Grund kompakte Geräte mit einer günstigeren und komfortableren Lösung entwickeln.
-
-Eine Arbeit der Universität Kochi in Japan beinhaltet das Entwickeln eines ambulanten Systems zum Schätzen der Haltung der unteren Gliedmassen unter normalen Lebensbedingungen. Der Sensor sollte den Probanden während den Aufzeichnungen nicht stören, damit sich dieser frei bewegen. Als Sensoren werden zuerst nur Beschleunigungssensoren verwendet. Mit diesem Aufbau konnte die Rotationswinkel in zwei Richtungen bestimmt werden. In einem weiteren Versuch wurden zusätzlich Gyroskope verwendet um die Winkel des Knie- und Hüftgelenkes zu bestimmen. In der finalen Version wurden die Gyroskope durch \gls{g:magnetometer} ersetzt. Somit wird beispielsweise der Fehler welche durch den Drift eines Gyroskopes entstehen ausgeschlossen. Zum Schätzen der Position und der Orientierung wird ein selbst entwickelter Sensor-Differenz-Algorithmus verwendet. Am Probanden werden somit mehrere Sensoren angebracht \cite{lit:kochi}.
-
+Auf dem Gebiet der Biomechanik werden viele Forschungen zur Untersuchung eine Bewegungsablaufes mit Beschleunigungssensoren getätigt. Die Motivation ist in den meisten Arbeiten dieselbe. Das Messen von Bewegungsabläufen wurde bisher mit Kameras in speziell dafür vorgesehenen Laboren vorgenommen. Bewegungsabläufe in einem anderen Umfeld sind mit dieser Methode nicht möglich zu bestimmen. Viele Forschungen wollen aus diesem Grund kompakte Geräte mit einer günstigeren und komfortableren Lösung entwickeln.\par
+%
+Eine Arbeit der Universität Kochi in Japan beinhaltet das Entwickeln eines ambulanten Systems zum Schätzen der Haltung der unteren Gliedmassen unter normalen Lebensbedingungen. Der Sensor sollte den Probanden während den Aufzeichnungen nicht stören, damit sich dieser frei bewegen. Als Sensoren werden zuerst nur Beschleunigungssensoren verwendet. Mit diesem Aufbau konnte die Rotationswinkel in zwei Richtungen bestimmt werden. In einem weiteren Versuch wurden zusätzlich Gyroskope verwendet um die Winkel des Knie- und Hüftgelenkes zu bestimmen. In der finalen Version wurden die Gyroskope durch \gls{g:magnetometer} ersetzt. Somit wird beispielsweise der Fehler welche durch den Drift eines Gyroskopes entstehen ausgeschlossen. Zum Schätzen der Position und der Orientierung wird ein selbst entwickelter Sensor-Differenz-Algorithmus verwendet. Am Probanden werden somit mehrere Sensoren angebracht \cite{lit:kochi}.\par
+%
 Eine weitere Arbeit im Bereich Human Engineering der Universität Hakkaido in Japan verwendet einen Beschleunigungssensor sowie ein Gy­ro­s­kop. Diese Sensorpakete werden jeweils auf dem Oberschenkel sowie dem Schienbein angebracht. Es wurden bewusst keine \gls{g:magnetometer} verwendet, da diese in einer Wohnumgebung zu ungenaue Resultate erzielen. Mit den Sensoren kann die Bewegungsbeschleunigung von der Erdbeschleunigung getrennt werden. Zusätzlich ist die Höhe sowie der Abstand zwischen den Hüften, die Distanz zwischen Hüfte und Knie sowie Knie und Knöchel bekannt. Mit den Sensoren werden die Winkel der Gelenke bestimmt, womit wiederum durch die bekannten Abständen der einzelnen Gelenken deren Position im Raum berechnet werden kann. Zur Kreuzvalidierung wurden die geschätzten Bewegungen mit einem Kamera Bewegungs-Erfassungs-System überprüft. Hierbei wurden beachtliche Übereinstimmungen mit einem Korrelationskoeffizienten von 0.924 für die Bewegung am Knie erreicht \cite{lit:hokkaido}.
 
-In einer Arbeit verfasst von der Technischen Universität in Schweden resultiert eine Methode, welche die Orientierung sowie die Position eines Beschleunigungssensors montiert auf einem Industrie-Roboter-Arm bestimmt. Die Orientierung wird zuerst in einem statischen Test bestimmt. Hierzu wird der Roboter-Arm auf bekannte Positionen mit unterschiedlichen Orientierungen gefahren. An diesen Positionen wird vom Sensor die vorliegende Erdbeschleunigung gemessen. Mit den bekannten und gemessenen Werten kann die Rotationsmatrix bestimmt werden und somit die Orientierung des Beschleunigungssensors mittels Transformation in das Bezugskoordinatensystem kompensiert werden. In einem zweiten Schritt wird die Position des Sensors in einem dynamischen Verfahren bestimmt. Dazu fährt der Roboterarm einen bekannten Weg mit konstanter Winkelgeschwindigkeit ab \cite{lit:roboarm1}. In einer weiterführenden Arbeit aufbauend auf der erstgenannten wird die Methode mit einem Industriepartner optimiert. Dabei werden die aufgezeichneten Daten des Beschleunigungssensor auf verschiedene Weisen mit Filterung aufbereitet um den Fehler zu minimieren \cite{lit:roboarm2}.
-
+In einer Arbeit verfasst von der Technischen Universität in Schweden resultiert eine Methode, welche die Orientierung sowie die Position eines Beschleunigungssensors montiert auf einem Industrie-Roboter-Arm bestimmt. Die Orientierung wird zuerst in einem statischen Test bestimmt. Hierzu wird der Roboter-Arm auf bekannte Positionen mit unterschiedlichen Orientierungen gefahren. An diesen Positionen wird vom Sensor die vorliegende Erdbeschleunigung gemessen. Mit den bekannten und gemessenen Werten kann die Rotationsmatrix bestimmt werden und somit die Orientierung des Beschleunigungssensors mittels Transformation in das Bezugskoordinatensystem kompensiert werden. In einem zweiten Schritt wird die Position des Sensors in einem dynamischen Verfahren bestimmt. Dazu fährt der Roboterarm einen bekannten Weg mit konstanter Winkelgeschwindigkeit ab \cite{lit:roboarm1}. In einer weiterführenden Arbeit aufbauend auf der erstgenannten wird die Methode mit einem Industriepartner optimiert. Dabei werden die aufgezeichneten Daten des Beschleunigungssensor auf verschiedene Weisen mit Filterung aufbereitet um den Fehler zu minimieren \cite{lit:roboarm2}.\par
+%
 In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde das Tracken eines Bewegungsablauf mittels Beschleunigungssensor, Gyroskop und \gls{g:magnetometer} realisiert. Dabei wird zuerst die Ausrichtung des Sensors zum Bezugssystem bestimmt und mittels Rotationsmatrix in das gewünschte Bezugssystem transformiert. Dann wird die gemessenen Beschleunigungen von der Beschleunigung des Erdfeldes separiert und anschliessend durch doppelte Integration auf den zurückgelegten Weg geschlossen. Da durch den Drift-Fehler des Gyroskopes die Messung nach wenigen Sekunden schon stark verfälscht ist, wurde eine zusätzliche Bewegungsdetektion vorgenommen. Die Integration erfolgt somit  nur, wenn sich das Testobjekt bewegt. Eine Bewegung wird mittels einem Threshold aus der berechneten Varianz des Beschleunigungssensors (abzüglich der Erdbeschleunigung) detektiert. Zusätzlich wird dem Drift des Gyroskopes mit einer Kompensation entgegengewirkt. Mit dieser Methode erreichten sie eine Genauigkeit von 2 cm auf eine Distanz von 50 cm \cite{lit:doubleint}.
-
+%
 \section{Ablauf und Gliederung des Projekts}
