--- a/content/2_grundlagen/grundlagen.tex
+++ b/content/2_grundlagen/grundlagen.tex
@@ -13,3 +13,8 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Grundlagen}\label{ch:grundlagen}
+\section{Anatomie des Knies}
+\section{LabVIEW auf NI myRIO 1990}
+\section{Rotationsmatrix}
+\section{nummerische Integration}
+\subsection{Trapeszmethode}
