--- a/content/3_konzept/konzept.tex
+++ b/content/3_konzept/konzept.tex
@@ -13,3 +13,17 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Konzept}\label{ch:konzept}
+\section{Algorithmus}
+\subsection{Übersicht}
+\subsection{Filterung}
+\subsection{Winkeldetektion}
+\subsection{Rotation}
+\subsection{Integration}
+\section{Software}
+\section{Testaufbau}
+\subsection{Mechanik}
+\subsection{Messhardware}
+\subsection{Messfehler}
+\section{Messprotokoll}
+\section{Validierung}
+\subsection{Messreihe}
