--- a/content/4_implementierung/implementierung.tex
+++ b/content/4_implementierung/implementierung.tex
@@ -13,3 +13,4 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Implementierung}\label{ch:implementierung}
+\section{}
