add glossary, literature and other things

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -19,6 +19,7 @@
 \newacronym{ac:bsp}{BSP}{Beispiel}
 \newacronym{ac:MEMS}{MEMS}{Microelectromechanical Systems}
 \newacronym{ac:EHSM}{EHSM}{Eidgenössische Hochschule für Sport Magglingen}
+\newacronym{ac:daq}{DAQ}{Data Acquisition}
 
 
 
