--- a/bibliography.bib
+++ b/bibliography.bib
@@ -78,3 +78,13 @@
   month = {},
   keywords = {lit},
 }
+
+@BOOK{lit:transversal,
+  title = {Funktionelle Anatomie - Topographie und Funktion des Bewegungssystems},
+  publisher = {Thieme},
+  year = {2000},
+  author = {Michael Sch"unke},
+  edition = {},
+  month = {9},
+  keywords = {lit},
+}
