--- a/content/2_grundlagen/grundlagen.tex
+++ b/content/2_grundlagen/grundlagen.tex
@@ -14,7 +14,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Grundlagen}\label{ch:grundlagen}
 \section{Anatomie des Knies}
-\section{LabVIEW auf NI myRIO 1990}
+\section{LabVIEW auf NI myRIO}
+\section{\acrshort{ac:daq} in MATLAB}
 \section{Rotationsmatrix}
 \section{nummerische Integration}
 \subsection{Trapeszmethode}
