--- a/glossary.tex
+++ b/glossary.tex
@@ -20,6 +20,8 @@
 \newglossaryentry{g:beispiel}{name=Beispiel, description={Ein Beispiel}}
 \newglossaryentry{g:triangulation}{name=Triangulation, description= {Positionsbestimmung im Raum mittels Richtungs- und Abstandsmessung. Berechnung der Position erfolgt anschliessend mit geometrischen Funktionen.}}
 \newglossaryentry{g:magnetometer}{name=Magnetometer, description={Sensor zum Messen von magnetischen Flussdichten}}
+\newglossaryentry{g:transversalebene}{name=Transversalebene, description={Ebene in der Medizin. Erstreckt sich von links nach rechts und von vorne nach hinten. Sie steht senkrecht auf der Längsachse des Mesnchlichen Körpers. \cite{lit:transversal}}}
+
 
 
 
